--- a/apps/api/src/mailer/email_templates/registerUser.hbs
+++ b/apps/api/src/mailer/email_templates/registerUser.hbs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width">
-        <title>ConcertHub Organizer Registration Confirmation</title>
+        <title>ConcertHub Participant Registration Confirmation</title>
     </head>
     <body>
         <div>
@@ -11,15 +11,12 @@
             <p>Your account has been created under these credentials:</p>
             <div>
                 <ul>
-                    <li>Name: {{name}}</li>
+                    <li>Name: {{firstName}} {{ln}}</li>
                     <li>Email: {{email}}</li>
                 </ul>
             </div>
-            <div>In order to access your account, you will have to verify your email address by clicking on the link below.</div>
+            <div>You can now log in to our website with your email and passsword.</div>
         </div>
         <hl></hl>
-        <div>
-            <a href={{verifyURL}}>Verify</a>
-        </div>
     </body>
 </html>
