updated user signup to require ve

--- a/apps/api/src/mailer/email_templates/registerUser.hbs
+++ b/apps/api/src/mailer/email_templates/registerUser.hbs
@@ -15,8 +15,13 @@
                     <li>Email: {{email}}</li>
                 </ul>
             </div>
-            <div>You can now log in to our website with your email and passsword.</div>
+            <div>In order to access your account, you will have to verify your email address by clicking on the link below.</div>
+            <div>Your verification token will expire in 3 hours.</div>
+            <div>If you are unable to verify at this time, another verification email will be sent when you attempt to log in.</div>
         </div>
         <hl></hl>
+        <div>
+            <a href={{verifyURL}}>Verify</a>
+        </div>
     </body>
 </html>
