--- a/apps/api/src/mailer/email_templates/registerOrganizer.hbs
+++ b/apps/api/src/mailer/email_templates/registerOrganizer.hbs
@@ -16,6 +16,8 @@
                 </ul>
             </div>
             <div>In order to access your account, you will have to verify your email address by clicking on the link below.</div>
+            <div>Your verification token will expire in 3 hours.</div>
+            <div>If you are unable to verify at this time, another verification email will be sent when you attempt to log in.</div>
         </div>
         <hl></hl>
         <div>
