--- a/apps/api/src/mailer/email_templates/registerUser.hbs
+++ b/apps/api/src/mailer/email_templates/registerUser.hbs
@@ -17,7 +17,7 @@
             </div>
             <div>In order to access your account, you will have to verify your email address by clicking on the link below.</div>
             <div>Your verification token will expire in 3 hours.</div>
-            <div>If you are unable to verify at this time, another verification email will be sent when you attempt to log in.</div>
+            <div>If you are unable to verify at this time, another verification email will be sent when you attempt to log in, but referral code bonuses will be lost.</div>
         </div>
         <hl></hl>
         <div>
