--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -111,5 +111,5 @@ a {
 @tailwind utilities;
 
 :root {
-  background: linear-gradient(90deg, #f9f6fd, #ebeaf0, #ebeaf0, #fcfcfd);
+  background: linear-gradient(90deg, #f9f6fd, #ebeaf0, #f5f3fc, #e3e3eb);
 }
